2014-09-24  Christophe Dumez  <cdumez@apple.com>

        Use is<HTML*Element>() instead of isHTML*Element() - Part 1
        https://bugs.webkit.org/show_bug.cgi?id=137068

        Reviewed by Ryosuke Niwa.

        Start using is<HTML*Element>() instead of isHTML*Element().
        Remaining usages will be updated in a follow-up patch to
        reduce the size of the change.

        * DOMCoreClasses.cpp:
        (DOMElement::createInstance):
        * DOMHTMLClasses.cpp:
        (DOMHTMLOptionElement::text):
        (DOMHTMLOptionElement::label):
        (DOMHTMLInputElement::form):
        (DOMHTMLInputElement::disabled):
        (DOMHTMLInputElement::readOnly):
        (DOMHTMLInputElement::setType):
        (DOMHTMLInputElement::value):
        (DOMHTMLInputElement::setValue):
        (DOMHTMLInputElement::setValueForUser):
        (DOMHTMLInputElement::select):
        (DOMHTMLInputElement::setSelectionStart):
        (DOMHTMLInputElement::selectionStart):
        (DOMHTMLInputElement::setSelectionEnd):
        (DOMHTMLInputElement::selectionEnd):
        (DOMHTMLInputElement::isTextField):
        (DOMHTMLInputElement::rectOnScreen):
        (DOMHTMLInputElement::replaceCharactersInRange):
        (DOMHTMLInputElement::selectedRange):
        (DOMHTMLInputElement::setAutofilled):
        (DOMHTMLInputElement::isAutofilled):
        (DOMHTMLInputElement::isUserEdited):
        (DOMHTMLTextAreaElement::form):
        (DOMHTMLTextAreaElement::value):
        (DOMHTMLTextAreaElement::setValue):
        (DOMHTMLTextAreaElement::select):
        (DOMHTMLTextAreaElement::isUserEdited):
        * WebFrame.cpp:
        (inputElementFromDOMElement):

2014-09-21  Timothy Hatcher  <timothy@apple.com>

        Make the Web Inspector use a separate web process.

        https://bugs.webkit.org/show_bug.cgi?id=135120

        Reviewed by Anders Carlsson.

        * WebCoreSupport/WebInspectorClient.cpp:
        (WebInspectorClient::openInspectorFrontend):