@@ -1,5 +1,15 @@
 2014-09-24  Christophe Dumez  <cdumez@apple.com>
 
+        Unreviewed build fix after r173932.
+
+        Unreviewed build fix after r173932 for Windows. Use WebCore:: namespace
+        explicitely in DOMCoreClasses.cpp.
+
+        * DOMCoreClasses.cpp:
+        (DOMElement::createInstance):
+
+2014-09-24  Christophe Dumez  <cdumez@apple.com>
+
         Use is<HTML*Element>() instead of isHTML*Element() - Part 1
         https://bugs.webkit.org/show_bug.cgi?id=137068
 
